# OperationalResearchApp

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  data_gen.py  main.cpp
.github/workflows/: cmake.yml  pylint.yml
app/: CMakeLists.txt  main.cpp
data_types/: CMakeLists.txt
data_types/src/app_data/: app_data.cpp  app_data.h
data_types/src/ingredients/: ingredient.cpp  ingredient.h
data_types/src/recipes/: recipe.cpp  recipe.h
data_types/src/supplies/: supply.cpp  supply.h
ingredients/: CMakeLists.txt
ingredients/src/ingredients/: ingredient.cpp  ingredient.h
model/: CMakeLists.txt
model/src/model/: model.cpp  model.h
recipes/: CMakeLists.txt
recipes/src/recipes/: recipe.cpp  recipe.h
sample_data/: sandwich.csv  sandwich.yaml
src/: app_data.cpp  app_data.h  json.h  model.cpp  model.h  utility.cpp  utility.h
test/: basic_test.cpp
utility/: CMakeLists.txt
utility/src/utility/: utility.cpp  utility.h
